# sql_bulk_import_profile

./: Cargo.toml  README.md  sql_bulk_import_profile.schema.json
assets/: preprocess.luau  preprocess.rhai
examples/: companies.xml  companies_import_profile.json  countries.xml  currencies.csv  currencies.luau  currencies.rhai  currencies_import_profile.json
src/: column_graph.rs  data_source.rs  delimited_data_source.rs  identifier.rs  import_executor.rs  import_options.rs  import_profile.rs  insert_processor.rs  lib.rs  log.rs  main.rs  merge_processor.rs  preprocess.rs  table_mapper.rs  temporary_table.rs  update_processor.rs  xml_data_source.rs
src/data_source/: string_map.rs
src/delimited_data_source/: delimited_data_source_stream.rs
src/import_profile/: import_profile_raw.rs
src/preprocess/: preprocess_lua.rs  preprocess_rhai.rs
src/table_mapper/: table_mapper_raw.rs
src/xml_data_source/: xml_data_source_stream.rs
tests/: examples.rs
tests/sql_server/: mod.rs
